--- a/assets/style.css
+++ b/assets/style.css
@@ -68,7 +68,8 @@ body>* {
     color: #555;
 }
 
-.suplovani table:nth-of-type(odd) td:first-child {
+.suplovani table td:first-child,
+.suplovani table tbody:first-child tr:first-child td {
     color: black;
 }
 
@@ -76,6 +77,9 @@ body>* {
     border-collapse: collapse;
     width: 100%;
     position: relative;
+    margin-top: 20px;
+    border-top: 3px solid #ddd;
+    border-bottom: 3px solid #ddd;
 }
 
 .suplovani table tbody {
